fixed wrapping on about h2

--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@
     align-content: center;
     justify-content: center;
     margin: 0;
-    flex-grow: 2;
+    white-space: nowrap;
     height: 50px;
     width: 100%;
   }
